# reti

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: test_leg_format.txt
printing/: Cargo.toml
printing/src/: lib.rs  printer.rs
src/: cli.rs  cmds.rs  data.rs  main.rs  parsing.rs  printer.rs  storage.rs  utils.rs
src/printing/: printer.rs
src/storage/: data.rs  legacy_parser.rs
storage/: Cargo.toml
storage/src/: data.rs  legacy_parser.rs  lib.rs
