[package]
name = "reti"
version = "0.1.0"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "reti"

[dependencies]
tempfile = "*"
rust-ini = "*"
curl = "*"
config = "*"
xdg = "*"
failure = "*"
rustc-serialize = "*"
nom = "2.*"

[dependencies.clap]
version = "2.*"

[dependencies.chrono]
version = "*"
features = ["rustc-serialize"]
