[package]
name = "reti"
version = "0.1.0"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "reti"

[dependencies]
tempfile = "3.1"
rust-ini = "0.16"
config = "0.10"
xdg = "2.2"
failure = "0.1"
rustc-serialize = "0.3"
nom = "2.*"

[dependencies.clap]
version = "2.*"

[dependencies.chrono]
version = "0.4"
features = ["rustc-serialize"]
