[package]
name = "reti"
version = "0.2.0"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]
edition = "2018"
description = "reti allows you do record time via the CLI by tracking periods of time during a day. All data is stored in a json file (store)."
license = "BSD-3-Clause"
documentation = "https://github.com/awidegreen/reti"
homepage = "https://github.com/awidegreen/reti"
repository = "https://github.com/awidegreen/reti"

[[bin]]
path = "src/main.rs"
name = "reti"

[dependencies]
tempfile = "3.1"
rust-ini = "0.16"
config = "0.10"
xdg = "2.2"
failure = "0.1"
rustc-serialize = "0.3"
nom = "2.*"

[dependencies.clap]
version = "2.*"

[dependencies.chrono]
version = "0.4"
features = ["rustc-serialize"]
